// openconfig is generated by proto_generator as a protobuf
// representation of a YANG schema.
//
// Input schema modules:
//  - yang/rib/openconfig-rib-bgp.yang
// Include paths:
//   - yang/...
syntax = "proto3";

package openconfig;

import "github.com/openconfig/ygot/proto/ywrapper/ywrapper.proto";
import "github.com/openconfig/ygot/proto/yext/yext.proto";
import "github.com/openconfig/ygot/demo/protobuf_getting_started/ribproto/openconfig/openconfig_rib_bgp/openconfig_rib_bgp.proto";

message Device {
  openconfig_rib_bgp.BgpRib bgp_rib = 314942212 [(yext.schemapath) = "/bgp-rib"];
}
